--- a/Navigation/ProfileView.xib
+++ b/Navigation/ProfileView.xib
@@ -8,13 +8,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="Navigation" customModuleProvider="target">
+            <connections>
+                <outlet property="aboutText" destination="IVx-ER-Mer" id="ar3-xr-tx6"/>
+                <outlet property="cityLabel" destination="v94-fv-6n0" id="yn1-UV-xsx"/>
+                <outlet property="dateOfBithLabel" destination="Wqo-Xi-6IZ" id="VDe-eP-e76"/>
+                <outlet property="nameLabel" destination="6Zf-Nl-22c" id="G6s-dB-uI6"/>
+                <outlet property="photoImage" destination="irf-Lk-gk4" id="kIo-f2-KRk"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="400" height="450"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="irf-Lk-gk4">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="angela-merkel" translatesAutoresizingMaskIntoConstraints="NO" id="irf-Lk-gk4">
                     <rect key="frame" x="17" y="17" width="204" height="159"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
@@ -60,6 +68,7 @@
         </view>
     </objects>
     <resources>
+        <image name="angela-merkel" width="1300" height="1659"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
