--- a/Navigation/ProfileView.xib
+++ b/Navigation/ProfileView.xib
@@ -8,15 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="Navigation" customModuleProvider="target">
-            <connections>
-                <outlet property="aboutText" destination="IVx-ER-Mer" id="ar3-xr-tx6"/>
-                <outlet property="cityLabel" destination="v94-fv-6n0" id="yn1-UV-xsx"/>
-                <outlet property="dateOfBithLabel" destination="Wqo-Xi-6IZ" id="VDe-eP-e76"/>
-                <outlet property="nameLabel" destination="6Zf-Nl-22c" id="G6s-dB-uI6"/>
-                <outlet property="photoImage" destination="irf-Lk-gk4" id="kIo-f2-KRk"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="Navigation" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="400" height="450"/>
